# order-inventory

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  turbo.json
apps/backend/: Dockerfile  package.json  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 4768ab61c2fd_create_products_table.py  634c615ab690_create_users_table.py  67f2df60fb48_create_orders_and_order_items_tables.py  9da8d5cf9193_create_customers_table.py
apps/backend/app/: config.py  database.py  dependencies.py  main.py
apps/backend/app/models/: customer.py  order.py  product.py  user.py
apps/backend/app/routers/: auth.py  customers.py  orders.py  products.py
apps/backend/app/schemas/: auth.py  customer.py  order.py  product.py
apps/backend/app/services/: auth.py
apps/frontend/: package.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx
apps/frontend/src/components/: AppLayout.tsx  AppSidebar.tsx
apps/frontend/src/components/ui/: button.tsx  dialog.tsx  label.tsx  tabs.tsx
apps/frontend/src/hooks/: use-auth.ts
apps/frontend/src/lib/: api.ts  auth-context.ts  auth.tsx  customers.ts  orders.ts  products.ts
apps/frontend/src/pages/: CustomersPage.tsx  HomePage.tsx  LoginPage.tsx  OrdersPage.tsx  ProductsPage.tsx
