[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Sayandip Halder", email = "sayandiph4@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)"
]

# This section tells Poetry 2.0+ to run in application (non-package) mode
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"